WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211756
Fix build errors after
r260992
https://bugs.webkit.org/show_bug.cgi?id=211756
Summary
Fix build errors after r260992
Yoshiaki Jitsukawa
Reported
2020-05-11 17:23:09 PDT
Fix build errors after
r260992
Attachments
Patch
(1.75 KB, patch)
2020-05-11 17:30 PDT
,
Yoshiaki Jitsukawa
no flags
Details
Formatted Diff
Diff
Patch
(3.76 KB, patch)
2020-05-11 18:40 PDT
,
Yoshiaki Jitsukawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yoshiaki Jitsukawa
Comment 1
2020-05-11 17:30:24 PDT
Created
attachment 399072
[details]
Patch
Yoshiaki Jitsukawa
Comment 2
2020-05-11 17:37:28 PDT
I'm not 100% sure this is the best fix. Another way would be to add "JSC::" to the macros in JSObject.h.
Yusuke Suzuki
Comment 3
2020-05-11 17:58:55 PDT
Comment on
attachment 399072
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399072&action=review
Nice catch! I think putting "JSC::" to JSC_TO_STRING_TAG_WITHOUT_TRANSITION is better if this macro is used in WebCore side too.
> Source/WebCore/ChangeLog:10 > + Introduce JSC::PropertyAttribute into WebCore::JSDOMIteratorPrototype() since > + PropertyAttribute is used without JSC namespace specifier there > + by JSC_TO_STRING_TAG_WITHOUT_TRANSITION() macro.
Let's put `JSC::` to JSC_TO_STRING_TAG_WITHOUT_TRANSITION side.
Yoshiaki Jitsukawa
Comment 4
2020-05-11 18:24:09 PDT
> Let's put `JSC::` to JSC_TO_STRING_TAG_WITHOUT_TRANSITION side.
Will do. Thank you!
Yoshiaki Jitsukawa
Comment 5
2020-05-11 18:40:29 PDT
Created
attachment 399082
[details]
Patch
Darin Adler
Comment 6
2020-05-11 20:33:16 PDT
Comment on
attachment 399082
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399082&action=review
> Source/JavaScriptCore/runtime/JSObject.h:1627 > + JSC_NATIVE_INTRINSIC_FUNCTION(jsName, cppName, (attributes), (length), JSC::NoIntrinsic)
This is OK. Could also have written ::JSC::NoIntrinsic, which makes this work even when inside a namespace that happens to have the identifier JSC in it.
EWS
Comment 7
2020-05-11 20:52:26 PDT
Committed
r261544
: <
https://trac.webkit.org/changeset/261544
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399082
[details]
.
Radar WebKit Bug Importer
Comment 8
2020-05-11 20:53:14 PDT
<
rdar://problem/63119218
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug