Fix build errors after r260992 https://bugs.webkit.org/show_bug.cgi?id=211756

Reviewed by Darin Adler.

Add JSC namespace specifier to NonIntrinsic and PropertyAttribute
in the macros in JSObject.h since those can be used outside of
or without introducing JSC namespace.
* runtime/JSObject.h:


Canonical link: https://commits.webkit.org/224662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261544 268f45cc-cd09-0410-ab3c-d52691b4dbfc